[package]
name = "rdm"
version = "0.1.20"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream", "rustls"] }
anyhow = "1"
futures-util = "0.3"
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.3"
libc = "0.2"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[dev-dependencies]
axum = "0.8"
tempfile = "3"
